Upload Of Food Pages

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_spaghetti_squash">spaghetti_squash</string>
+    <string name="title_activity_food__selection">Food_Selection</string>
 </resources>
