--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     </string>
     <string name="title_activity_spaghetti_squash">spaghetti_squash</string>
     <string name="title_activity_food__selection">Food_Selection</string>
+    <string name="title_activity_calendar">Calendar</string>
 </resources>
